# mcAutoMod

./: CMakeList.txt  CMakeLists.txt  README.md  graphUI.py  gui.py  installationFiles.txt  methods.cpp  methods.hpp
include/mcmodmanager/: methods.h  osMethods.h
src/: main.cpp
src/common/: bindings.cpp  methods.cpp
src/include/: osMethods.h
src/win/: methods_win.cpp
